# Python_UnitTests

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/testdemo/: testdemo.py
tests/: test_demo.py
