[metadata]
name = Test_Demo
description = Demo Descript
author = Jeong Jaegyu
license = MIT
license_files =
    LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: Python :: 3
    Programming Language :: Python :: Python :: 3 :: Only
    Programming Language :: Python :: Python :: 3.6
    Programming Language :: Python :: Python :: 3.7
    Programming Language :: Python :: Python :: 3.8
    Programming Language :: Python :: Python :: 3.9
    Programming Language :: Python :: Python :: 3.10


[options]
packages =
    testdemo
#install_requires =
#    none
python_requires = >= 3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=5.0.4
    tox>=3.26.0
    pytest>=7.1.3
    pytest-cov>=3.0.0
    mypy>=0.981

[options.package_data]
testdemo = py.typed

[flake8]
max-line-length = 160
